small fixes for Ask 1,2,3

--- a/Ask1/product-Dell_Vostro_3500.html
+++ b/Ask1/product-Dell_Vostro_3500.html
@@ -156,55 +156,49 @@
                 </section>
 
 
-            <section class="review-section">
-                <h3> Αξιολογήσεις </h3>
-                <p>Βαθμολογία: 4,5</p>
-                <dl>
-                    <hr>
-                    <article class="review">
-                        <header>
-                            <dt> Kevin_Prenti 10/08/2022 </dt>
-                        </header>
-                        <dd> αυτο το λαπτοπ το πηρα πριν απο 1 χρονο και 2 μηνες και εχω να πω τα εξης.<br>
-                            <br>
-                            αμα ψαχνεται ενα λαπτοπ για μια απλη χρηση ειναι καλο αλλα μη περιμενεται πολλα απο αποδωσει<br>
-                            η οθονη εναι μια απλη 1920x1080π ιπς<br>
-                            οσο αναφορα το keyboard για τα λεφτα τ καλο ειναι<br>
-                            το λαπτοπ στην πρωτη σειρα του keyboard εχει κουμπια για πολλες και διαφορες χρησεις πχ για τη φωτηνοτητα, τον ηχο καθως και καποια αλλα τα οποια πιστευω πως ειναι πολυ χρησημα και τα χρησημποιω ολη την ωρα<br>
-                            η μπαταρια για το βαρος του λαπτοπ ειναι καλη το λεω αυτο διοτι το χρησημοποιω οταν ταξιδευω και μπορω να πω πως αμα το βαλετε και σε εξηκονομησει ενεργειας θα αντεξει ανετα 4-5 ωρες συνεχομενης χρησης { νετφλιξ, γιοτουμπ}<br>
-                            τα 4gb ram δεν ειναι αρκετα και καλο θα ηταν να κανετε αναβαθμησει αμα το αγορασετε<br>
-                            <br>
-                            ο επεξεργαστης ενας απλος i3 11 gen ειναι οποτε μην περιμενετε πολλα<br>
-                            το λαπτοπ ζεστενεται ευκολα ακομα και οταν εισαστε στο netflix ,youtube , κλπ<br>
-                            {πιστευω πως εχει να κανει με το κακο desing του}<br>
-                            με 100-200 ευρω παραπανω μπορειτε να βρειτε λαπτοπ που ειναι ποιο value for money απο οτι αυτο
-                        </dd>
-                    </article>
-                    <hr>
-                    <article class="review">
-                        <header>
-                            <dt> erminaa 20/07/2022 </dt>
-                        </header>
-                        <dd>
-                            Θα έβαζα 5 αστέρια αν η οθόνη του δεν χάλαγε μέσα σε 8 μήνες.<br>
-                            <br>
-                            Μία μέρα το άνοιξα και την βρήκα γεμάτη γραμμές. Η εγγύηση δεν το κάλυπτε και ζήτησαν 256€ για την επισκευή. Να σημειωθεί ότι σε τοπικό κατάστημα μου αντικατέστησαν την οθόνη για 160€.<br>
-                            <br>
-                            Κατά τ'άλλα, για τη χαλαρή χρήση που έκανα, απολύτως ικανοποιητικό. Προφανώς, βέβαια, ούτε το συστήνω, ούτε πρόκειται να ξανά επενδύσω σε προϊόντα της συγκεκριμένης εταιρείας.
-                        </dd>
-                    </article>
-                    <hr>
-                    <article class="review">
-                        <header>
-                            <dt> Giannis_Vrakas72 21/06/2022 </dt>
-                        </header>
-                        <dd>
-                            το έχω 1 χρόνο και δεν έχει προβλήματα. Αξίζει τα λεφτά του!!
-                        </dd>
-                    </article>
-                    <hr>
-                </dl>
-            </section>
+                <section class="review-section">
+					<h3> Αξιολογήσεις </h3>
+					<h4>Βαθμολογία: 3</h4>
+					<article class="review">
+						<header>
+							Kevin_Prenti   10/08/2022
+						</header>
+						<p>
+							αυτο το λαπτοπ το πηρα πριν απο 1 χρονο και 2 μηνες και εχω να πω τα εξης.<br>
+							<br>
+							αμα ψαχνεται ενα λαπτοπ για μια απλη χρηση ειναι καλο αλλα μη περιμενεται πολλα απο αποδωσει<br>
+							η οθονη εναι μια απλη 1920x1080π ιπς<br>
+							οσο αναφορα το keyboard για τα λεφτα τ καλο ειναι<br>
+							το λαπτοπ στην πρωτη σειρα του keyboard εχει κουμπια για πολλες και διαφορες χρησεις πχ για τη φωτηνοτητα, τον ηχο καθως και καποια αλλα τα οποια πιστευω πως ειναι πολυ χρησημα και τα χρησημποιω ολη την ωρα<br>
+							η μπαταρια για το βαρος του λαπτοπ ειναι καλη το λεω αυτο διοτι το χρησημοποιω οταν ταξιδευω και μπορω να πω πως αμα το βαλετε και σε εξηκονομησει ενεργειας θα αντεξει ανετα 4-5 ωρες συνεχομενης χρησης { νετφλιξ, γιοτουμπ}<br>
+							τα 4gb ram δεν ειναι αρκετα και καλο θα ηταν να κανετε αναβαθμησει αμα το αγορασετε<br>
+							<br>
+							ο επεξεργαστης ενας απλος i3 11 gen ειναι οποτε μην περιμενετε πολλα<br>
+							το λαπτοπ ζεστενεται ευκολα ακομα και οταν εισαστε στο netflix ,youtube , κλπ<br>
+							{πιστευω πως εχει να κανει με το κακο desing του}<br>
+							με 100-200 ευρω παραπανω μπορειτε να βρειτε λαπτοπ που ειναι ποιο value for money απο οτι αυτο
+						</p>
+						
+					</article>
+					<article class="review">
+						<header>
+							erminaa   20/07/2022
+						</header>
+						<p>
+							Θα έβαζα 5 αστέρια αν η οθόνη του δεν χάλαγε μέσα σε 8 μήνες.<br>
+							<br>
+							Μία μέρα το άνοιξα και την βρήκα γεμάτη γραμμές. Η εγγύηση δεν το κάλυπτε και ζήτησαν 256€ για την επισκευή. Να σημειωθεί ότι σε τοπικό κατάστημα μου αντικατέστησαν την οθόνη για 160€.<br>
+							<br>
+							Κατά τ'άλλα, για τη χαλαρή χρήση που έκανα, απολύτως ικανοποιητικό. Προφανώς, βέβαια, ούτε το συστήνω, ούτε πρόκειται να ξανά επενδύσω σε προϊόντα της συγκεκριμένης εταιρείας.
+						</p>
+					</article>
+					<article class="review">
+						<header>
+							Giannis_Vrakas72   21/06/2022
+						</header>
+							<p>το έχω 1 χρόνο και δεν έχει προβλήματα. Αξίζει τα λεφτά του!!</p>
+					</article>
+				</section>
 
             
 
@@ -215,9 +209,9 @@
             <ul class="site-footer-list">
                 <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
                 <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
-                <li class="site-footer-list-item"><a href="mailto: webmaster@aueb.gr"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
+                <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage Contact"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
             </ul>
-            <p class="copyright">Take A Byte © 2022</p>
+            <span class="copyright">Take A Byte © 2022</span>
         </footer>
 
     </body>
