--- a/Ask1/product-Gigabyte_GeForce_GTX_1660.html
+++ b/Ask1/product-Gigabyte_GeForce_GTX_1660.html
@@ -144,39 +144,34 @@
 
             <section class="review-section">
                 <h3> Αξιολογήσεις </h3>
-                <p>Βαθμολογία: 4,8</p>
-                <dl>
-                    <hr>
-                    <article class="review">
-                        <header>
-                            <dt> Vertus 10/10/2022 </dt>
-                        </header>
-                        <dd> Μια εξαιρετική κάρτα γραφικών για την τιμή της μπορεί να αποδώσει πολύ καλά παντού σε παιχνίδια και άλλες εφαρμογές χαμηλές θερμοκρασίες, πολύ ήσυχη και ποιοτική κατασκευή είναι τα θετικά χαρακτηριστικά της χωρίς 
-                            <br> να βρίσκω κάποιο αρνητικό την συστήνω ανεπιφύλακτα μέχρι να φτάσει την τιμή των 350 ευρώ και δεν υπάρχει άλλο μοντέλο ποιο φτηνό
-                        </dd>
-                    </article>
-                    <hr>
-                    <article class="review">
-                        <header>
-                            <dt> giorgos0901 24/09/2022 </dt>
-                        </header>
-                        <dd>
-                            Άψογη καρτούλα! Παίζει τα πάντα δεν χρειάζεται αριθμός fps μπλα μπλα! Κουμπώνεις και παίζεις!
-                        </dd>
-                    </article>
-                    <hr>
-                    <article class="review">
-                        <header>
-                            <dt>kvlantis 18/08/2022 </dt>
-                        </header>
-                        <dd>
-                            Αγορά στα 263€ αρχές Αυγούστου, όπου αντικατέστησε μία GTX 750. Για gaming στα 1080p και με τιμή μέχρι 260-280€, μπορώ να πω οτι αξίζει ακόμα να προβεί κάποιος στην αγορά της συσγκεκριμένης κάρτας. Για παραπάνω λεφτά ούτε συζήτηση, υπάρχουν καλύτερες επιλογές (πχ. RX 6600, RTX 2060). 
-                            <br>Τα ατού της κάρτας είναι οι χαμηλές θερμοκρασίες (με μια μικρή θυσία λίγο στο θόρυβο) και το σημαντικότερο πλέον στις μέρες μας, η χαμηλή κατανάλωση ρεύματος σε σχέση με τις επόμενες γενιές καρτών. 
-                            <br>Αν το μπάτζετ σας είναι σφιχτό και μέχρι 280€ και δεν σας απασχολεί το gaming στα 4Κ, εννοείται την αγοράζετε με κλειστά μάτια.
-                        </dd>
-                    </article>
-                    <hr>
-                </dl>
+                <h4>Βαθμολογία: 4,8</h4>
+                <article class="review">
+                    <header>
+                        Vertus   10/10/2022
+                    </header>
+                    <p>
+                        Μια εξαιρετική κάρτα γραφικών για την τιμή της μπορεί να αποδώσει πολύ καλά παντού σε παιχνίδια και άλλες εφαρμογές χαμηλές θερμοκρασίες, πολύ ήσυχη και ποιοτική κατασκευή είναι τα θετικά χαρακτηριστικά της χωρίς
+                        να βρίσκω κάποιο αρνητικό την συστήνω ανεπιφύλακτα μέχρι να φτάσει την τιμή των 350 ευρώ και δεν υπάρχει άλλο μοντέλο ποιο φτηνό
+                    </p>
+                </article>
+                <article class="review">
+                    <header>
+                        giorgos0901   24/09/2022
+                    </header>
+                    <p>
+                        Άψογη καρτούλα! Παίζει τα πάντα δεν χρειάζεται αριθμός fps μπλα μπλα! Κουμπώνεις και παίζεις!
+                    </p>
+                </article>
+                <article class="review">
+                    <header>
+                        kvlantis   18/08/2022
+                    </header>
+                    <p>
+                        Αγορά στα 263€ αρχές Αυγούστου, όπου αντικατέστησε μία GTX 750. Για gaming στα 1080p και με τιμή μέχρι 260-280€, μπορώ να πω οτι αξίζει ακόμα να προβεί κάποιος στην αγορά της συσγκεκριμένης κάρτας. Για παραπάνω λεφτά ούτε συζήτηση, υπάρχουν καλύτερες επιλογές (πχ. RX 6600, RTX 2060).
+                        <br>Τα ατού της κάρτας είναι οι χαμηλές θερμοκρασίες (με μια μικρή θυσία λίγο στο θόρυβο) και το σημαντικότερο πλέον στις μέρες μας, η χαμηλή κατανάλωση ρεύματος σε σχέση με τις επόμενες γενιές καρτών.
+                        <br>Αν το μπάτζετ σας είναι σφιχτό και μέχρι 280€ και δεν σας απασχολεί το gaming στα 4Κ, εννοείται την αγοράζετε με κλειστά μάτια.
+                    </p>
+                </article>
             </section>
             
         </main>
@@ -186,9 +181,9 @@
             <ul class="site-footer-list">
                 <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
                 <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
-                <li class="site-footer-list-item"><a href="mailto: webmaster@aueb.gr"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
+                <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage Contact"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
             </ul>
-            <p class="copyright">Take A Byte © 2022</p>
+            <span class="copyright">Take A Byte © 2022</span>
         </footer>
 
     </body>
