--- a/Ask1/product-categories.html
+++ b/Ask1/product-categories.html
@@ -31,73 +31,92 @@
 
         
         <main>
-            <h2>Κατηγορίες Προϊόντων</h2>
-            <ol>
-                <li><img src ="../assets/pc.jpg" width="200" height="200">  <br>
-                    Η/Υ και Περιφερειακές Συσκευές
-                    <ul>
-                        <li> Κουτιά Υπολογιστών </li>
-                        <li> Πληκτρολόγια </li>
-                        <li> Ποντίκια </li>
-                        <li> Οθόνες </li>
-                        <li> Εξωτερικές Μονάδες Αποθήκευσης </li>
-                        <li><a href="products-laptops.html"> Laptops </a></li>
-                    </ul>
-                </li>
-                <li><img src ="../assets/upgrade.jpg" width="200" height="200">  <br> 
-                    Αναβαθμίσεις
-                    <ul>
-                        <li> Σκληροί δίσκοι </li>
-                        <li><a href="products-graphics_cards.html"> Κάρτες Γραφικών </a></li>
-                        <li> Modding and Cooling </li>
-                        <li> Μνήμες RAM </li>
-                        <li> Μητρικές Κάρτες </li>
-                        <li> Επεξεργαστές </li>
-                    </ul>
-                </li>
-                <li> <img src ="../assets/network.jpg" width="200" height="200">  <br> 
-                    Network 
-                    <ul>
-                        <li> Routers </li>
-                        <li> Καλώδια Δικτύου </li>
-                        <li> Wifi Extenders </li>
-                        <li> Switches </li>
-                        <li> Κάρτες Δικτύου </li>
-                        <li> File Servers </li>
-                    </ul>
-                </li>
-                <li> <img src ="../assets/phone.jpg" width="200" height="200">  <br> 
-                    Κινητά Τηλέφωνα και Tablets
-                    <ul>
-                        <li> Κινητά Τηλέφωνα </li>
-                        <li> Tablets </li>
-                        <li> Αξεσουάρ Κινητών </li>
-                        <li> Αξεσουάρ Tablet </li>
-                        <li> Προπληρωμένες Κάρτες </li>
-                        <li> Ανταλλακτικά Κινητών </li>
-                    </ul>
-                </li>
-                <li> <img src ="../assets/tv.jpg" width="200" height="200">  <br> 
-                    Τηλεοράσεις και Αξεσουάρ
-                    <ul>
-                        <li> Τηλεοράσεις </li>
-                        <li> Βάσεις Τηλεοράσεων </li>
-                        <li> Τηλεχειριστήρια Τηλεόρασης</li>
-                        <li> Αξεσουάρ TV</li>
-                    </ul>
-                </li>
-                <li> <img src ="../assets/house.jpg" width="200" height="200">  <br> 
-                    Οικιακές Συσκευές 
-                    <ul>
-                        <li> Θέρμανση & Κλιματισμός </li>
-                        <li> Λευκές Οικιακές Συσκευές </li>
-                        <li> Συσκευές Καθαρισμού </li>
-                        <li> Συσκευές Μαγειρέματος </li>
-                        <li> Καφετιέρες </li>
-                        <li> Συσκευές Επεξεργασίας Τροφίμων </li>
-                    </ul>
-                </li>
-            </ol>
+            <section id="product-categories">
+                <h2>Κατηγορίες Προϊόντων</h2>
+                <ol id="category-list">
+                    <section class="product-category">
+                        <li>
+                            <img src ="../assets/pc.jpg" width="200px" height="200px">
+                            <h3>Η/Υ και Περιφερειακές Συσκευές</h3>
+                            <ul>
+                                <li> Κουτιά Υπολογιστών </li>
+                                <li> Πληκτρολόγια </li>
+                                <li> Ποντίκια </li>
+                                <li> Οθόνες </li>
+                                <li> Εξωτερικές Μονάδες Αποθήκευσης </li>
+                                <li class="product-link"><a href="products-laptops.html"> Laptops </a></li>
+                            </ul>
+                        </li>
+                    </section>
+                    <section class="product-category">
+                        <li>
+                            <img src ="../assets/upgrade.jpg" width="200px" height="200px">
+                            <h3>Αναβαθμίσεις</h3>
+                            <ul>
+                                <li> Σκληροί δίσκοι </li>
+                                <li class="product-link"><a href="products-graphics_cards.html"> Κάρτες Γραφικών </a></li>
+                                <li> Modding and Cooling </li>
+                                <li> Μνήμες RAM </li>
+                                <li> Μητρικές Κάρτες </li>
+                                <li> Επεξεργαστές </li>
+                            </ul>
+                        </li>
+                    </section>
+                    <section class="product-category">
+                        <li>
+                            <img src ="../assets/network.jpg" width="200px" height="200px">
+                            <h3>Network</h3>
+                            <ul>
+                                <li> Routers </li>
+                                <li> Καλώδια Δικτύου </li>
+                                <li> Wifi Extenders </li>
+                                <li> Switches </li>
+                                <li> Κάρτες Δικτύου </li>
+                                <li> File Servers </li>
+                            </ul>
+                        </li>
+                    </section>
+                    <section class="product-category">
+                        <li>
+                            <img src ="../assets/phone.jpg" width="200px" height="200px">
+                            <h3>Κινητά Τηλέφωνα και Tablets</h3>
+                            <ul>
+                                <li> Κινητά Τηλέφωνα </li>
+                                <li> Tablets </li>
+                                <li> Αξεσουάρ Κινητών </li>
+                                <li> Αξεσουάρ Tablet </li>
+                                <li> Προπληρωμένες Κάρτες </li>
+                                <li> Ανταλλακτικά Κινητών </li>
+                            </ul>
+                        </li>
+                    </section>
+                    <section class="product-category">
+                        <li>
+                            <img src ="../assets/tv.jpg" width="200px" height="200px">
+                            <h3>Τηλεοράσεις και Αξεσουάρ</h3>
+                            <ul>
+                                <li> Τηλεοράσεις </li>
+                                <li> Βάσεις Τηλεοράσεων </li>
+                                <li> Τηλεχειριστήρια Τηλεόρασης</li>
+                                <li> Αξεσουάρ TV</li>
+                            </ul>
+                        </li>
+                    </section>
+                    <section class="product-category">
+                        <li> <img src ="../assets/house.jpg" width="200px" height="200px">
+                            <h3>Οικιακές Συσκευές</h3>
+                            <ul>
+                                <li> Θέρμανση & Κλιματισμός </li>
+                                <li> Λευκές Οικιακές Συσκευές </li>
+                                <li> Συσκευές Καθαρισμού </li>
+                                <li> Συσκευές Μαγειρέματος </li>
+                                <li> Καφετιέρες </li>
+                                <li> Συσκευές Επεξεργασίας Τροφίμων </li>
+                            </ul>
+                        </li>
+                    </section>
+                </ol>
+            </section>
         </main>
 
 
@@ -105,9 +124,9 @@
             <ul class="site-footer-list">
                 <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
                 <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
-                <li class="site-footer-list-item"><a href="mailto: webmaster@aueb.gr"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
+                <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage Contact"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
             </ul>
-            <p class="copyright">Take A Byte © 2022</p>
+            <span class="copyright">Take A Byte © 2022</span>
         </footer>
 
     </body>
