--- a/Ask3/product-Gigabyte_GeForce_GTX_1660.html
+++ b/Ask3/product-Gigabyte_GeForce_GTX_1660.html
@@ -196,11 +196,11 @@
 
         <footer class="site-footer">
             <ul class="site-footer-list">
-                <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
-                <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
-                <li class="site-footer-list-item"><a href="mailto: webmaster@aueb.gr"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
+                <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" ></a></li>
+                <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" ></a></li>
+                <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage Contact"><img src="../assets/email-logo.png" alt="Email" ></a></li>
             </ul>
-            <p class="copyright">Take A Byte © 2022</p>
+            <span class="copyright">Take A Byte © 2022</span>
         </footer>
 
     </body>
