--- a/Ask1/index.html
+++ b/Ask1/index.html
@@ -31,24 +31,80 @@
 
         <main>
 
-            <h2>Καλως ήρθατε στην ιστοσελίδα του ηλεκτρονικού μας καταστήματος, Take A Byte!</h2>
-            <p>Στο κατάστημά μας μπορείτε να βρείτε όλα τα είδη τεχνολογίας που χρειάζεστε, από κινητά τηλέφωνα και laptops, μέχρι πλυντήρια και καφετιέρες!</p>
-
-            <h3>Σχετικά με εμάς</h3>
-            <p>Το κατάστημά μας ξεκίνησε να δραστηριοποιείται στον χώρο της τεχνολογίας το 2022. Διαθέτει ευρεία γκάμα προϊόντων τεχνολογίας, 
-                κινητά τηλέφωνα, υπολογιστές και εξαρτήματα, περιφερειακά, οικιακές συσκευές και άλλα.</p>
-            <p>Έτσι, μέσα σε λίγους μήνες, έχει καταξιωθεί ως ένα από τα πιο αγαπημένα καταστήματα τεχνολογίας στην ελληνική αγορά.</p>
+            <article id="welcome-text">
+                <h2>Καλώς ήρθατε στην ιστοσελίδα του ηλεκτρονικού μας καταστήματος, Take A Byte!</h2>
+                <p>Στο κατάστημά μας μπορείτε να βρείτε όλα τα είδη τεχνολογίας που χρειάζεστε, από κινητά τηλέφωνα και laptops, μέχρι πλυντήρια και καφετιέρες!</p>
+                <h3>Σχετικά με εμάς</h3>
+                <p>Το κατάστημά μας ξεκίνησε να δραστηριοποιείται στον χώρο της τεχνολογίας το 2022. Διαθέτει ευρεία γκάμα προϊόντων τεχνολογίας,
+                    κινητά τηλέφωνα, υπολογιστές και εξαρτήματα, περιφερειακά, οικιακές συσκευές και άλλα.</p>
+                <p>Έτσι, μέσα σε λίγους μήνες, έχει καταξιωθεί ως ένα από τα πιο αγαπημένα καταστήματα τεχνολογίας στην ελληνική αγορά.</p>
+                    <img src="../assets/main_smartphones.jpg" height="400px">
+                    <p>Έχουμε <a href="javascript:void(0);">κινητά τηλέφωνα</a> για όλες τις ανάγκες, από χαλαρούς χρήστες που θέλουν ένα απλό 
+                        τηλέφωνο για καθημερινή χρήση, μέχρι τους πιο hardcore fans των mobile παιχνιδιών!</p>
+                    <img src="../assets/main_laptops.jpg" height="400px">
+                    <p>Έχουμε <a href="products-laptops.html">laptops</a> όλων των ειδών και μεγεθών. Είτε θέλεις ένα gaming laptop για να
+                        αντικαταστήσεις τον προσωπικό σου υπολογιστή, είτε προτιμάς ένα laptop που
+                        θα μπορείς να μεταφέρεις εύκολα στη δουλειά ή στη σχολή, θα το βρεις <a href="products-laptops.html">εδώ</a>!
+                    </p>
+                    <img src="../assets/main_computer_parts.jpg" height="400px">
+                    <p>Αν θέλεις να φτιάξεις τον δικό σου υπολογιστή, προσαρμοσμένο στα δικά σου μέτρα,
+                        μπορείς να βρεις στο κατάστημά μας όλα τα απαραίτητα <a href="javascript:void(0);">εξαρτήματα</a> 
+                        που θα χρειαστείς, όπως <a href="products-graphics_cards.html">κάρτα γραφικών</a>, 
+                        <a href="javascript:void(0);">μνήμη RAM</a>, ή <a href="javascript:void(0);">επεξεργαστή</a>.
+                    </p>
+                    <img src="../assets/main_household_appl.jpg" height="400px">
+                    <p>Αν είσαι φοιτητής και μετακόμισες στο καινούριο σου σπίτι, ή αν απλά
+                        έγινε σεισμός 7 ρίχτερ στην περιοχή σου, χρειάζεσαι <a href="javascript:void(0);">οικιακές συσκευές</a>.
+                        Στο Take A Byte θα βρεις όλες τις συσκευές που χρειάζεσαι για να εξοπλίσεις το
+                        καινούριο σπίτι, όπως πλυντήριο, κλιματιστικό, ή ακόμα και κατσαρόλες!
+                    </p>
+                    <h3>Επίσης, προσφέρουμε: </h3>
+                    <ul>
+                        <li>Εγγύηση 2 χρόνων σε όλα τα προϊόντα μας.</li>
+                        <li>Δωρεάν μεταφορικά, για αγορές άνω των 30€.</li>
+                        <li>Παράδοση με Courier σε 3 εργάσιμες μέρες.</li>
+                    </ul>
+            </article>
         
         </main>
 
 
         <footer class="site-footer">
-            <ul class="site-footer-list">
-                <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
-                <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
-                <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage Contact"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
-            </ul>
-            <span class="copyright">Take A Byte © 2022</span>
+            <section class="left-footer-info">
+                <h3>Πληροφορίες Επικοινωνίας</h3>
+                <p>28ης Οκτωβρίου 76, Αθήνα, 10434</p>
+                <iframe class="map-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3144.272595569044!2d23.729929915656633!3d37.994101707282745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1a2cc954f82ed%3A0x5795a212958689bb!2s28is%20Oktovriou%2076%2C%20Athina%20104%2034!5e0!3m2!1sen!2sgr!4v1669470073265!5m2!1sen!2sgr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <p>Τηλ: <a href="tel: 210 8203 124">210 8203 124</a></p>
+            </section>
+            <section class="middle-footer-links">
+                <ul class="site-footer-list">
+                    <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" width="100" height="100"></a></li>
+                    <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" width="100" height="100"></a></li>
+                    <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage Contact"><img src="../assets/email-logo.png" alt="Email" width="100" height="100"></a></li>
+                </ul>
+                <span class="copyright">Take A Byte © 2022</span>
+            </section>
+            <section class="right-footer-open">
+                <table class="opening-hours-table">
+                    <thead>
+                        <tr>
+                            <th colspan="2"><h3>Ώρες Λειτουργίας</h3></th>
+                        </tr>
+                    </thead>
+                    <tr>
+                        <td>Δευ - Παρ</td>
+                        <td>09:00 - 19:00</td>
+                    </tr>
+                    <tr>
+                        <td>Σάββατο</td>
+                        <td>11:00 - 17:00</td>
+                    </tr>
+                    <tr>
+                        <td>Κυριακή</td>
+                        <td>Κλειστά</td>
+                    </tr>
+                </table>
+            </section>
         </footer>
 
     </body>
