--- a/Ask3/about-us.html
+++ b/Ask3/about-us.html
@@ -33,20 +33,20 @@
         <main id="about-us-text">
 
             <section class="cv-text">
-            <a href="https://www.linkedin.com/in/christos-rousas-5a39aa253/">
-                <h3>Χρήστος Ρούσας</h3>
-                <img src="../assets/3190180.png" class="prof-img" title="Christos Rousas" alt="Christos Rousas">
-            </a>
+                <a href="https://www.linkedin.com/in/christos-rousas-5a39aa253/">
+                    <h3>Χρήστος Ρούσας</h3>
+                    <img src="../assets/3190180.png" class="prof-img" title="Christos Rousas" alt="Christos Rousas">
+                </a>
                 <p>Ο Χρήστος Ρούσας, συνιδρυτής του Take A Byte, είναι φοιτητής στο Οικονομικό Πανεπιστήμιο Αθηνών, όπου και διανύει το
                     4ο έτος των σπουδών του στην Πληροφορική. Του αρέσει η Θεωρία Παιγνίων, η Επιχειρησιακή Έρευνα, και τα μαθηματικά γενικότερα.
                     Στον ελεύθερό του χρόνο, ασχολείται με τη μουσική, παίζοντας κιθάρα και πιάνο, και με τη γυμναστική.</p>
             </section>
             
             <section class="cv-text">
-            <a href="https://gr.linkedin.com/in/john-mastrogiannis-b45b60168">
-                <h3>Ιωάννης Μαστρογιάννης</h3>
-                <img src="../assets/3190114.png" class="prof-img" title="Ioannis Mastrogiannis" alt="Ioannis Mastrogiannis">
-            </a>
+                <a href="https://gr.linkedin.com/in/john-mastrogiannis-b45b60168">
+                    <h3>Ιωάννης Μαστρογιάννης</h3>
+                    <img src="../assets/3190114.png" class="prof-img" title="Ioannis Mastrogiannis" alt="Ioannis Mastrogiannis">
+                </a>
                 <p>Ο Ιωάννης Μαστρογιάννης, συνιδρυτής του Take A Byte, είναι φοιτητής στο 
                     Οικονομικό Πανεπιστήμιο Αθηνών, όπου και διανύει το 4ο έτος των σπουδών του 
                     στην Πληροφορική. Θέλει να ασχοληθεί με τα βιντεοπαιχνίδια και τη μουσική.</p>
@@ -56,12 +56,41 @@
 
         
         <footer class="site-footer">
-            <ul class="site-footer-list">
-                <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" ></a></li>
-                <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" ></a></li>
-                <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage Contact"><img src="../assets/email-logo.png" alt="Email" ></a></li>
-            </ul>
-            <span class="copyright">Take A Byte © 2022</span>
+            <section class="left-footer-info">
+                <h3>Πληροφορίες Επικοινωνίας</h3>
+                <p>28ης Οκτωβρίου 76, Αθήνα, 10434</p>
+                <iframe class="map-iframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3144.272595569044!2d23.729929915656633!3d37.994101707282745!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14a1a2cc954f82ed%3A0x5795a212958689bb!2s28is%20Oktovriou%2076%2C%20Athina%20104%2034!5e0!3m2!1sen!2sgr!4v1669470073265!5m2!1sen!2sgr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <p>Τηλ: <a href="tel: 210 8203 124">210 8203 124</a></p>
+            </section>
+            <section class="middle-footer-links">
+                <ul class="site-footer-list">
+                    <li class="site-footer-list-item"><a href="https://www.facebook.com"><img src="../assets/facebook-logo.png" alt="Facebook" ></a></li>
+                    <li class="site-footer-list-item"><a href="https://www.instagram.com"><img src="../assets/instagram-logo.png" alt="Instagram" ></a></li>
+                    <li class="site-footer-list-item"><a href="mailto:p3190180@aueb.gr;p3190114@aueb.gr?subject=Webpage Contact"><img src="../assets/email-logo.png" alt="Email" ></a></li>
+                </ul>
+                <span class="copyright">Take A Byte © 2022</span>
+            </section>
+            <section class="right-footer-open">
+                <table class="opening-hours-table">
+                    <thead>
+                        <tr>
+                            <th colspan="2"><h3>Ώρες Λειτουργίας</h3></th>
+                        </tr>
+                    </thead>
+                    <tr>
+                        <td>Δευ - Παρ</td>
+                        <td>09:00 - 19:00</td>
+                    </tr>
+                    <tr>
+                        <td>Σάββατο</td>
+                        <td>11:00 - 17:00</td>
+                    </tr>
+                    <tr>
+                        <td>Κυριακή</td>
+                        <td>Κλειστά</td>
+                    </tr>
+                </table>
+            </section>
         </footer>
 
     </body>
