small ask3 flex fixes and comments

--- a/Ask3/product-Gigabyte_GeForce_GTX_1660.html
+++ b/Ask3/product-Gigabyte_GeForce_GTX_1660.html
@@ -60,7 +60,7 @@
                         και σύστημα ψύξης Windforce 2X
                     </p>
                     <div class="img-text-wrapper">
-                        <img class="specs-image odd" src="../assets/gr1_specs1.png">
+                        <img class="specs-image" src="../assets/gr1_specs1.png">
                         <p>
                             Το σύστημα ψύξης Windforce 2X διαθέτει μοναδικούς ανεμιστήρες λεπίδων 2x90mm, Alternate Spinning, σύνθετο σωλήνα
                             χαλκού άμεσης αφής και λειτουργικότητα ενεργού ανεμιστήρα 3D, παρέχοντας ταυτόχρονα μια αποτελεσματική
@@ -68,7 +68,7 @@
                         </p>
                     </div>
                     <div class="img-text-wrapper">
-                        <img class="specs-image even" src="../assets/gr1_specs2.png">
+                        <img class="specs-image" src="../assets/gr1_specs2.png">
                         <p>
                             Το GIGABYTE "Alternate Spinning" είναι η μόνη λύση που μπορεί να λύσει την ταραχώδη ροή αέρα των γειτονικών ανεμιστήρων.
                             Δεδομένου ότι οι γειτονικοί ανεμιστήρες περιστρέφονται προς την ίδια κατεύθυνση, η κατεύθυνση ροής του αέρα είναι αντίθετη
