--- a/Ask3/index.html
+++ b/Ask3/index.html
@@ -40,19 +40,19 @@
                     κινητά τηλέφωνα, υπολογιστές και εξαρτήματα, περιφερειακά, οικιακές συσκευές και άλλα.</p>
                 <p>Έτσι, μέσα σε λίγους μήνες, έχει καταξιωθεί ως ένα από τα πιο αγαπημένα καταστήματα τεχνολογίας στην ελληνική αγορά.</p>
                 <div class="img-text-wrapper">
-                    <img src="../assets/main_smartphones.jpg" class="main-page-image odd">
+                    <img src="../assets/main_smartphones.jpg" class="main-page-image">
                     <p>Έχουμε <a href="javascript:void(0);">κινητά τηλέφωνα</a> για όλες τις ανάγκες, από χαλαρούς χρήστες που θέλουν ένα απλό 
                         τηλέφωνο για καθημερινή χρήση, μέχρι τους πιο hardcore fans των mobile παιχνιδιών!</p>
                 </div>
                 <div class="img-text-wrapper">
-                    <img src="../assets/main_laptops.jpg" class="main-page-image even">
+                    <img src="../assets/main_laptops.jpg" class="main-page-image">
                     <p>Έχουμε <a href="products-laptops.html">laptops</a> όλων των ειδών και μεγεθών. Είτε θέλεις ένα gaming laptop για να
                         αντικαταστήσεις τον προσωπικό σου υπολογιστή, είτε προτιμάς ένα laptop που
                         θα μπορείς να μεταφέρεις εύκολα στη δουλειά ή στη σχολή, θα το βρεις <a href="products-laptops.html">εδώ</a>!
                     </p>
                 </div>
                 <div class="img-text-wrapper">
-                    <img src="../assets/main_computer_parts.jpg" class="main-page-image odd">
+                    <img src="../assets/main_computer_parts.jpg" class="main-page-image">
                     <p>Αν θέλεις να φτιάξεις τον δικό σου υπολογιστή, προσαρμοσμένο στα δικά σου μέτρα,
                         μπορείς να βρεις στο κατάστημά μας όλα τα απαραίτητα <a href="javascript:void(0);">εξαρτήματα</a> 
                         που θα χρειαστείς, όπως <a href="products-graphics_cards.html">κάρτα γραφικών</a>, 
@@ -60,7 +60,7 @@
                     </p>
                 </div>
                 <div class="img-text-wrapper">
-                    <img src="../assets/main_household_appl.jpg" class="main-page-image even">
+                    <img src="../assets/main_household_appl.jpg" class="main-page-image">
                     <p>Αν είσαι φοιτητής και μετακόμισες στο καινούριο σου σπίτι, ή αν απλά
                         έγινε σεισμός 7 ρίχτερ στην περιοχή σου, χρειάζεσαι <a href="javascript:void(0);">οικιακές συσκευές</a>.
                         Στο Take A Byte θα βρεις όλες τις συσκευές που χρειάζεσαι για να εξοπλίσεις το
