--- a/Ask3/product-Dell_Vostro_3500.html
+++ b/Ask3/product-Dell_Vostro_3500.html
@@ -61,7 +61,7 @@
                         και λεπτομέρεια έχει η εικόνα αλλά παράλληλα αυξάνεται και η κατανάλωση ενέργειας.
                     </p>
                     <div class="img-text-wrapper">
-                        <img class="specs-image odd" src="../assets/laptop1_specs1.png">
+                        <img class="specs-image" src="../assets/laptop1_specs1.png">
                         <p>
                             Ο επεξεργαστής που ενσωματώνει είναι ο Intel Core i3 1115G4 χρονισμένος στα 3Ghz της γενιάς Tiger Lake (11th Gen) (2021).
                             Μπορεί να εκτελέσει απροβλημάτιστα εργασίες καθημερινής φύσεως όπως πλοήγηση στο διαδίκτυο,
