--- a/Ask4/index.html
+++ b/Ask4/index.html
@@ -42,13 +42,13 @@
                     <p>Έτσι, μέσα σε λίγους μήνες, έχει καταξιωθεί ως ένα από τα πιο αγαπημένα καταστήματα τεχνολογίας στην ελληνική αγορά.</p>
                     <div class="img-text-wrapper">
                         <img srcset="../assets/main_smartphones_small.jpg 500w, ../assets/main_smartphones.jpg 1400w"
-                             src="../assets/main_smartphones.jpg" class="main-page-image" alt="smartphones">
+                             src="../assets/main_smartphones.jpg" sizes="100vw" class="main-page-image" alt="smartphones">
                         <p>Έχουμε <a href="javascript:void(0);">κινητά τηλέφωνα</a> για όλες τις ανάγκες, από χαλαρούς χρήστες που θέλουν ένα απλό
                             τηλέφωνο για καθημερινή χρήση, μέχρι τους πιο hardcore fans των mobile παιχνιδιών!</p>
                     </div>
                     <div class="img-text-wrapper">
                         <img srcset="../assets/main_laptops_small.jpg 500w, ../assets/main_laptops.jpg 1000w"
-                             src="../assets/main_laptops.jpg" class="main-page-image" alt="laptops">
+                             src="../assets/main_laptops.jpg" sizes="100vw" class="main-page-image" alt="laptops">
                         <p>Έχουμε <a href="products-laptops.html">laptops</a> όλων των ειδών και μεγεθών. Είτε θέλεις ένα gaming laptop για να
                             αντικαταστήσεις τον προσωπικό σου υπολογιστή, είτε προτιμάς ένα laptop που
                             θα μπορείς να μεταφέρεις εύκολα στη δουλειά ή στη σχολή, θα το βρεις <a href="products-laptops.html">εδώ</a>!
@@ -56,7 +56,7 @@
                     </div>
                     <div class="img-text-wrapper">
                         <img srcset="../assets/main_computer_parts_small.jpg 500w, ../assets/main_computer_parts.jpg 526w"
-                             src="../assets/main_computer_parts.jpg" class="main-page-image" alt="computer parts">
+                             src="../assets/main_computer_parts.jpg" sizes="100vw" class="main-page-image" alt="computer parts">
                         <p>Αν θέλεις να φτιάξεις τον δικό σου υπολογιστή, προσαρμοσμένο στα δικά σου μέτρα,
                             μπορείς να βρεις στο κατάστημά μας όλα τα απαραίτητα <a href="javascript:void(0);">εξαρτήματα</a>
                             που θα χρειαστείς, όπως <a href="products-graphics_cards.html">κάρτα γραφικών</a>,
@@ -65,7 +65,7 @@
                     </div>
                     <div class="img-text-wrapper">
                         <img srcset="../assets/main_household_appl_small.jpg 500w, ../assets/main_household_appl.jpg 780w"
-                             src="main_household_appl.jpg" class="main-page-image" alt="household appliances">
+                             src="main_household_appl.jpg" sizes="100vw" class="main-page-image" alt="household appliances">
                         <p>Αν είσαι φοιτητής και μετακόμισες στο καινούριο σου σπίτι, ή αν απλά
                             έγινε σεισμός 7 ρίχτερ στην περιοχή σου, χρειάζεσαι <a href="javascript:void(0);">οικιακές συσκευές</a>.
                             Στο Take A Byte θα βρεις όλες τις συσκευές που χρειάζεσαι για να εξοπλίσεις το
