--- a/Ask4/product-Dell_Vostro_3500.html
+++ b/Ask4/product-Dell_Vostro_3500.html
@@ -46,12 +46,14 @@
             <div class="content-wrapper">
                 <article class="product">
                     <section class="product-info">
-                        <img class="product-image" src = "../assets/laptop1.jpg" alt="product image">
-                        <h2>Dell Vostro 3500 15.6" FHD (i3-1115G4/8GB/256GB SSD/W10 Home) (GR Keyboard)</h2>
+                        <header class="product-header">
+                            <img class="product-image" src = "../assets/laptop1.jpg" alt="product image">
+                            <h2>Dell Vostro 3500 15.6" FHD (i3-1115G4/8GB/256GB SSD/W10 Home) (GR Keyboard)</h2>
                             <ul>
                                 <li>Κωδικός Προϊόντος: 010601</li>
                                 <li>Τιμή: 500 €</li>
                             </ul>
+                        </header>
                 
                         <h3> Σύντομη Περιγραφή </h3>
                         <p>Φορητός υπολογιστής 15,6 ιντσών με στενό περιθώριο στις δύο πλευρές, μπαταρία ExpressCharge και επεξεργαστή Intel Core 11ης γενιάς.</p>
@@ -62,8 +64,8 @@
                             και λεπτομέρεια έχει η εικόνα αλλά παράλληλα αυξάνεται και η κατανάλωση ενέργειας.
                         </p>
                         <div class="img-text-wrapper">
-                            <img srcset="../assets/laptop1_specs1_small.png 500w, ../assets/laptop1_specs1.png 1200w"
-                                 src="../assets/laptop1_specs1.png" class="specs-image" alt="laptop 1 specs image 1">
+                            <img srcset="../assets/laptop1_specs1_small.png 500w, ../assets/laptop1_specs1.png 1200w" 
+                                 src="../assets/laptop1_specs1.png" sizes="100vw" class="specs-image" alt="laptop 1 specs image 1">
                             <p>
                                 Ο επεξεργαστής που ενσωματώνει είναι ο Intel Core i3 1115G4 χρονισμένος στα 3Ghz της γενιάς Tiger Lake (11th Gen) (2021).
                                 Μπορεί να εκτελέσει απροβλημάτιστα εργασίες καθημερινής φύσεως όπως πλοήγηση στο διαδίκτυο,
