--- a/Ask4/product-Gigabyte_GeForce_GTX_1660.html
+++ b/Ask4/product-Gigabyte_GeForce_GTX_1660.html
@@ -46,12 +46,14 @@
             <div class="content-wrapper">
                 <article class="product">
                     <section class="product-info">
-                        <img class="product-image" src = "../assets/gr1.jpeg" alt="product image">
-                        <h2>Gigabyte GeForce GTX 1660 6GB GDDR5 OC Κάρτα Γραφικών PCI-E x16 3.0 με HDMI και 3 DisplayPort</h2>
-                        <ul>
-                            <li>Κωδικός Προϊόντος: 020201</li>
-                            <li>Τιμή: 272,12 €</li>
-                        </ul>
+                        <header class="product-header">
+                            <img class="product-image" src = "../assets/gr1.jpeg" alt="product image">
+                            <h2>Gigabyte GeForce GTX 1660 6GB GDDR5 OC Κάρτα Γραφικών PCI-E x16 3.0 με HDMI και 3 DisplayPort</h2>
+                            <ul>
+                                <li>Κωδικός Προϊόντος: 020201</li>
+                                <li>Τιμή: 272,12 €</li>
+                            </ul>
+                        </header>
                 
                         <h3> Σύντομη Περιγραφή </h3>
                         <p>Gigabyte GeForce GTX 1660 6GB OC βασίζεται στην αρχιτεκτονική NVIDIA Turing με ενσωματωμένη μνήμη 6GB GDDR5,
@@ -62,7 +64,7 @@
                         </p>
                         <div class="img-text-wrapper">
                             <img srcset="../assets/gr1_specs1_small.png 500w, ../assets/gr1_specs1.png 949w"
-                                 src="../assets/gr1_specs1.png" class="specs-image" alt="graphics card 1 specs image 1">
+                                 src="../assets/gr1_specs1.png" sizes="100vw" class="specs-image" alt="graphics card 1 specs image 1">
                             <p>
                                 Το σύστημα ψύξης Windforce 2X διαθέτει μοναδικούς ανεμιστήρες λεπίδων 2x90mm, Alternate Spinning, σύνθετο σωλήνα
                                 χαλκού άμεσης αφής και λειτουργικότητα ενεργού ανεμιστήρα 3D, παρέχοντας ταυτόχρονα μια αποτελεσματική
@@ -71,7 +73,7 @@
                         </div>
                         <div class="img-text-wrapper">
                             <img srcset="../assets/gr1_specs2_small.png 500w, ../assets/gr1_specs2.png 1221w"
-                                 src="../assets/gr1_specs2.png" class="specs-image" alt="graphics card 1 specs image 2">
+                                 src="../assets/gr1_specs2.png" sizes="100vw" class="specs-image" alt="graphics card 1 specs image 2">
                             <p>
                                 Το GIGABYTE "Alternate Spinning" είναι η μόνη λύση που μπορεί να λύσει την ταραχώδη ροή αέρα των γειτονικών ανεμιστήρων.
                                 Δεδομένου ότι οι γειτονικοί ανεμιστήρες περιστρέφονται προς την ίδια κατεύθυνση, η κατεύθυνση ροής του αέρα είναι αντίθετη
